--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "start": "npm run build && node dist/src/index.js",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
+    "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "test:functional": "jest --projects ./test --runInBand"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/galleonpt/Surf-Forecast.git"
   },
-  "keywords": [],
+  "keywords": [
+    "nodejs, ts, typescript, tests, jest, node"
+  ],
   "author": "José Luís",
   "license": "ISC",
   "bugs": {
@@ -23,11 +26,16 @@
   },
   "homepage": "https://github.com/galleonpt/Surf-Forecast#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.6.2",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^4.0.2"
   },
