--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test:functional": "jest --projects ./test --runInBand"
+    "test:functional": "jest --projects ./test --runInBand --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/galleonpt/Surf-Forecast#readme",
   "devDependencies": {
+    "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.6.2",
@@ -40,6 +41,9 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.4",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
