--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test:functional": "jest --projects ./test --runInBand --forceExit",
+    "test:unit": "jest",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
   },
@@ -28,6 +29,7 @@
   },
   "homepage": "https://github.com/galleonpt/Surf-Forecast#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
     "@types/module-alias": "^2.0.0",
@@ -45,6 +47,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.4",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
