--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test:functional": "jest --projects ./test --runInBand --forceExit",
+    "test:functional": "jest --projects ./test --runInBand",
     "test:unit": "jest",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
     "@types/module-alias": "^2.0.0",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
@@ -52,6 +53,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.10.5"
   }
 }
