--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/galleonpt/Surf-Forecast#readme",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/config": "0.0.36",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
@@ -52,6 +53,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.4",
     "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "dotenv": "^8.2.0",
