--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/config": "0.0.36",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.7.36",
     "@types/nock": "^11.1.0",
@@ -58,6 +59,7 @@
     "config": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.5"
   }
