--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test:functional": "jest --projects ./test --runInBand",
+    "test:functional": "jest --projects ./test/ --runInBand",
     "test:unit": "jest",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
