--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "test": "npm run test:unit && npm run test:functional",
     "start": "npm run build && node dist/src/index.js",
+    "start:local": "ts-node-dev src/index.ts",
     "dev": "ts-node-dev src/index.ts",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
@@ -39,16 +40,18 @@
     "@types/mongoose": "^5.7.36",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.6.2",
+    "@types/pino": "^6.3.2",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "jest": "^26.4.2",
     "nock": "^13.0.4",
+    "pino-pretty": "^4.2.1",
     "prettier": "^2.1.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
-    "ts-node-dev": "^1.0.0-pre.61",
+    "ts-node-dev": "^1.0.0-pre.63",
     "typescript": "^4.0.2"
   },
   "dependencies": {
@@ -61,6 +64,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "pino": "^6.6.1"
   }
 }
