--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
     "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.7.36",
     "@types/nock": "^11.1.0",
@@ -69,6 +70,7 @@
     "express-pino-logger": "^5.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.5",
     "pino": "^6.6.1"
