--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@types/lodash": "^4.14.161",
     "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.7.36",
+    "@types/multer": "^1.4.4",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.6.2",
     "@types/pino": "^6.3.2",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
@@ -67,12 +69,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.2.0",
     "express-pino-logger": "^5.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
     "mongoose": "^5.10.5",
-    "pino": "^6.6.1"
+    "pino": "^6.6.1",
+    "swagger-ui-express": "^4.1.4"
   }
 }
