--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "npm run test:unit && npm run test:functional",
+    "test": "npm run style:fix && npm run test:unit && npm run test:functional",
     "start": "npm run build && node dist/src/index.js",
     "start:local": "ts-node-dev --transpile-only src/index.ts | pino-pretty -c",
     "dev": "ts-node-dev src/index.ts",
@@ -41,13 +41,12 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.161",
     "@types/module-alias": "^2.0.0",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.36",
-    "@types/multer": "^1.4.4",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.6.2",
     "@types/pino": "^6.3.2",
     "@types/supertest": "^2.0.10",
-    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
@@ -62,6 +61,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.4",
+    "@types/express-rate-limit": "^5.1.0",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -69,14 +69,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-openapi-validator": "^4.2.0",
     "express-pino-logger": "^5.0.0",
+    "express-rate-limit": "^5.1.3",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.5",
-    "pino": "^6.6.1",
-    "swagger-ui-express": "^4.1.4"
+    "pino": "^6.6.1"
   }
 }
